; ModuleID = '/home/carl/AnghaBench/openssl/apps/extr_s_server.c_load_dh_param.c'
source_filename = "/home/carl/AnghaBench/openssl/apps/extr_s_server.c_load_dh_param.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"r\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @load_dh_param to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @load_dh_param(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i8* %0, i8** %2, align 8
  store i32* null, i32** %3, align 8
  %5 = load i8*, i8** %2, align 8
  %6 = call i32* @BIO_new_file(i8* %5, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  store i32* %6, i32** %4, align 8
  %7 = icmp eq i32* %6, null
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  br label %12

9:                                                ; preds = %1
  %10 = load i32*, i32** %4, align 8
  %11 = call i32* @PEM_read_bio_DHparams(i32* %10, i32* null, i32* null, i32* null)
  store i32* %11, i32** %3, align 8
  br label %12

12:                                               ; preds = %9, %8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @BIO_free(i32* %13)
  %15 = load i32*, i32** %3, align 8
  ret i32* %15
}

declare dso_local i32* @BIO_new_file(i8*, i8*) #1

declare dso_local i32* @PEM_read_bio_DHparams(i32*, i32*, i32*, i32*) #1

declare dso_local i32 @BIO_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
